--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mood_backGround"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <ImageView
+       android:id="@+id/mood_img"
+       android:layout_width="319dp"
+       android:layout_height="398dp"
+       android:layout_margin="40dp"
 
-</android.support.constraint.ConstraintLayout>
+       app:srcCompat="@drawable/smiley_happy" />
+
+   <Button
+       android:id="@+id/comment_button"
+       android:layout_width="50dp"
+       android:layout_height="70dp"
+       android:layout_alignParentStart="true"
+       android:layout_alignParentBottom="true"
+       android:layout_marginStart="13dp"
+       android:layout_marginBottom="26dp"
+       android:background="@drawable/ic_note_add_black" />
+
+   <Button
+       android:id="@+id/history_button"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignBaseline="@+id/comment_button"
+       android:layout_alignParentEnd="true"
+       android:layout_marginEnd="8dp"
+       android:background="@drawable/ic_history_black" />
+
+
+</RelativeLayout>
