--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/days_layout"
-    android:elevation="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="80dp"
+    android:elevation="10dp">
 
     <TextView
         android:id="@+id/days_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="BLABLABLA"/>
+        android:layout_height="50dp"
+        android:text="BLABLABLA" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/comment_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="13dp"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_comment_black_48px" />
+
+</RelativeLayout>
